# ravenx-agent-safety

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  agent_guard.py  agent_monitor.py  cli.py  presets.py  scope_limiter.py
tests/: test_agent_safety.py
